pug.log
/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2490
  throw err
  ^

SyntaxError: Unexpected token (803:0)
    at Parser.pp$4.raise (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2488:13)
    at Parser.pp.unexpected (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:623:8)
    at Parser.pp$3.parseExprAtom (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2011:10)
    at Parser.pp$3.parseExprSubscripts (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1872:19)
    at Parser.pp$3.parseMaybeUnary (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1849:17)
    at Parser.pp$3.parseExprOps (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1791:19)
    at Parser.pp$3.parseMaybeConditional (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1774:19)
    at Parser.pp$3.parseMaybeAssign (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1750:19)
    at Parser.pp$1.parseVar (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1087:26)
    at Parser.pp$1.parseVarStatement (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:972:8) {
  pos: 38216,
  loc: Position { line: 803, column: 0 },
  raisedAt: 38217
}
/usr/local/lib/node_modules/pug-cli/node_modules/pug-load/index.js:27
          throw ex;
          ^

Error: ENOENT: no such file or directory, open 'es/componentes/dados_contatos.pug'
    at es/componentes/contato.pug line 2
    at Object.openSync (fs.js:462:3)
    at Object.readFileSync (fs.js:364:35)
    at Function.read (/usr/local/lib/node_modules/pug-cli/node_modules/pug-load/index.js:69:13)
    at Object.read (/usr/local/lib/node_modules/pug-cli/node_modules/pug/lib/index.js:147:25)
    at /usr/local/lib/node_modules/pug-cli/node_modules/pug-load/index.js:24:25
    at walkAST (/usr/local/lib/node_modules/pug-cli/node_modules/pug-walk/index.js:23:18)
    at /usr/local/lib/node_modules/pug-cli/node_modules/pug-walk/index.js:104:20
    at Array.reduce (<anonymous>)
    at walkAndMergeNodes (/usr/local/lib/node_modules/pug-cli/node_modules/pug-walk/index.js:103:18)
    at walkAST (/usr/local/lib/node_modules/pug-cli/node_modules/pug-walk/index.js:37:19) {
  errno: -2,
  syscall: 'open',
  code: 'ENOENT',
  path: 'es/componentes/dados_contatos.pug'
}
